Tue Jul  3 11:41:12 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/OS_Memory.h:
          Use ::std instead of std to prevent problems when users
          have XXX::YYY::std as namespace in their own code. This fixes
          bugzilla 2976. Thanks to Pavel Zaichenko <zpf at ivl dot ua>
          for reporting this

Mon Jul  2 15:59:28 UTC 2007  Adam Mitz  <mitza@ociweb.com>

        * ace/Vector_T.h:
        * ace/Vector_T.inl:

          Added a swap() member to Vector.  Previously Vector inherited swap()
          which would produce invalid results since the members declared in
          Vector were not swapped.  This fixes bugilla bug #2951.

        * tests/Vector_Test.cpp:

          Test for the change above.

Mon Jul  2 14:36:25 UTC 2007  Adam Mitz  <mitza@ociweb.com>

        * bin/generate_doxygen.pl:

          Fixed a logic error that resulted in manpage documentation even when
          the option was not specified.

Mon Jul  2 14:19:03 UTC 2007  Adam Mitz  <mitza@ociweb.com>

        * docs/ACE-guidelines.html:

          Fixed incorrect statement about casts between pointers and longs.

Mon Jul  2 12:03:36 UTC 2007  Jeff Parsons <j.parsons@vanderbilt.edu>

        * bin/MakeProjectCreator/config/global.features:

          Added line 'gen_ostream = 0' so that the gen_ostream feature
          can be inherited into tao.mpc but be turned off by default.
          Thanks to Johnny Willemsen <jwillemsen at remedy dot nl> for
          suggesting this approach to keeping the default footprint
          of TAO from rising by default generation of ostream insertion
          operators for all ORB-defined IDL types.

Mon Jul  2 11:39:20 UTC 2007  Chad Elliott  <elliott_c@ociweb.com>

        * ACE.mwc:

          Utilize the new 'associate' feature to decrease the amount of
          hand editing required for automake generation.

        * bin/MakeProjectCreator/modules/AutomakeWorkspaceHelper.pm:
